# WorkNeat

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
docs/decision-records/: ui-system.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppIcon.tsx  DisplayCanvas.tsx  Inspector.tsx  MoveWarningDialog.tsx  PermissionGate.tsx  SettingsSheet.tsx  Sidebar.tsx  TopBar.tsx  heroui.ts
src/lib/: hotkeys.ts  mockData.ts  storage.ts  tauri.ts  theme.ts  updater.ts
src/types/: layout.ts
