[package]
name = "workneat"
version = "0.1.0"
description = "A macOS display-aware window layout manager"
authors = ["WorkNeat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting"] }
